# Student-Advising

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  FIX_RAILWAY_CRASH.md  Procfile  RAILWAY_SETUP.md  README.md  pom.xml  railway.json  railway.toml  start-services.sh  start.bat
ai-service/: app.py  pyproject.toml  requirements.txt  vercel.json
data/: advising-portal.lock.db  advising-portal.mv.db
src/main/java/com/university/adminportal/: AdminPortalApplication.java
src/main/java/com/university/adminportal/config/: AuthInterceptor.java  CurrentUser.java  WebConfig.java
src/main/java/com/university/adminportal/controller/: AdminSystemsController.java  AuthController.java  CommunicationController.java  DocumentationController.java  EmailController.java  FileProxyController.java  ProfileController.java  SchedulingController.java  StudentAdvisingController.java  StudentController.java
src/main/java/com/university/adminportal/model/: AdvisingSession.java  CommunicationRecord.java  GeneratedDocument.java  ScheduleReminder.java  Student.java  User.java  UserSession.java
src/main/java/com/university/adminportal/repository/: AdvisingSessionRepository.java  CommunicationRecordRepository.java  GeneratedDocumentRepository.java  ScheduleReminderRepository.java  StudentRepository.java  UserRepository.java  UserSessionRepository.java
src/main/java/com/university/adminportal/service/: AuthService.java
src/main/resources/: application.properties
