[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-ai-service"
version = "0.1.0"
description = "AI Service for Academic Admin Portal"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.3",
    "groq>=0.11.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "werkzeug>=3.0.0"
]
